--- a/MOBILE/MyFirstApp/app/src/main/res/layout/activity_main.xml
+++ b/MOBILE/MyFirstApp/app/src/main/res/layout/activity_main.xml
@@ -79,4 +79,24 @@
         app:layout_constraintBottom_toTopOf="@+id/sentTextView"
         app:layout_constraintStart_toStartOf="@+id/sentTextView" />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/editText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/linearLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="bottom"
+            android:divider="@drawable/divider"
+            android:orientation="vertical"
+            android:paddingHorizontal="16dp"
+            android:showDividers="middle" />
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
