--- a/MOBILE/MyFirstApp/app/src/main/res/menu/main_menu.xml
+++ b/MOBILE/MyFirstApp/app/src/main/res/menu/main_menu.xml
@@ -6,4 +6,7 @@
         android:id="@+id/menu_item_settings"
         android:icon="@android:drawable/ic_menu_preferences"
         android:title="@string/title_activity_settings" />
+    <item
+        android:id="@+id/menu_item_clear"
+        android:title="Clear" />
 </menu>
