Added base64 encoding

--- a/MOBILE/MyFirstApp/app/src/main/res/menu/main_menu.xml
+++ b/MOBILE/MyFirstApp/app/src/main/res/menu/main_menu.xml
@@ -8,5 +8,5 @@
         android:title="@string/title_activity_settings" />
     <item
         android:id="@+id/menu_item_clear"
-        android:title="Clear" />
+        android:title="@string/title_clear_messages" />
 </menu>
