--- a/MOBILE/MyFirstApp/app/src/main/res/layout/activity_main.xml
+++ b/MOBILE/MyFirstApp/app/src/main/res/layout/activity_main.xml
@@ -83,6 +83,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="8dp"
+        android:foregroundGravity="bottom"
         app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
